log
Thu, Mar 27, 2025  5:11:45 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  5:14:25 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: expected identifier or '(' before '->' token
     List->head = NULL;
         ^~
list.c:34:9: error: expected identifier or '(' before '->' token
     List->tail-> NULL;
         ^~
list.c:35:5: error: 'list' undeclared (first use in this function)
     list->current = NULL;
     ^~~~
list.c:35:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:36:12: error: expected expression before 'List'
     return List;
            ^~~~
list.c:32:11: error: unused variable 'new' [-Werror=unused-variable]
     List *new = (List*)malloc(sizeof(List));
           ^~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8e7ba24
Thu, Mar 27, 2025  5:15:20 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
7a8e14b
